RTD - Added documentation

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -115,7 +115,7 @@ margin-top: .2em}
   font-size: 1.2em;
   box-sizing: border-box;
   border: none;
-  background-color: #E5FFFB;
+  background-color: #33BFAE;
   color: #2D2D2D;
   font-family: "IBM Plex Sans", serif;
   padding: 10px 10px;
