--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -101,7 +101,7 @@ h3, h4, h5, h6 {
   width: 370px;
   margin-right: .25em;
   position: relative;
-  background-color: #00B69B;
+  background-color: #33BFAE;
   height: auto;
 }
 
@@ -115,7 +115,7 @@ margin-top: .2em}
   font-size: 1.2em;
   box-sizing: border-box;
   border: none;
-  background-color: #33BFAE;
+  background-color: #E5FFFB;
   color: #2D2D2D;
   font-family: "IBM Plex Sans", serif;
   padding: 10px 10px;
