RTD - Added documentation

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -101,7 +101,7 @@ h3, h4, h5, h6 {
   width: 370px;
   margin-right: .25em;
   position: relative;
-  background-color: #33BFAE;
+  background-color: #126F61;
   height: auto;
 }
 
