DOCS - Updated documentation

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -115,6 +115,7 @@ a.reference.internal .xref.py.py-mod.docutils.literal.notranslate {
 
 #side-menu {
 margin-top: .2em,
+margin-bottom: .2em;
 color: #0A1A1A;
 height: auto}
 
