--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -72,19 +72,178 @@ img.align-center {
   display: none;
 }
 
+p {
+text-align: justify;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-h1::after, h2::after, h3::after, h4::after, h5::after, h6::after {
-  content: '';
-  position: absolute;
-  width: calc(100% + 10px); /* Extend the underline a bit longer to the right */
-  height: 2px;
-  bottom: -2px; /* Adjust the position of the underline */
-  left: 0;
-  background-color: var(--hover-color);
-  visibility: visible;
-  transform: scaleX(1);
+h1 {
+font-weight: 500;
+border-bottom: 4px solid var(--main-color);
+}
+
+h2 {
+font-weight: 450;
+border-bottom: 2.5px solid var(--main-color);
+}
+
+h3 {
+font-weight: 300;}
+
+h3, h4, h5, h6 {
+  border-bottom: 1px solid var(--main-color);
+}
+
+#side-menu-container {
+  border-radius: 12px;
+  width: 370px;
+  margin-right: .25em;
+  position: relative;
+  background-color: #18997D;
+  height: auto;
+  max-height: 150vh;
+    padding-bottom: .25em;
+}
+
+a.reference.internal .xref.py.py-mod.docutils.literal.notranslate {
+  background: none;
+}
+
+#side-menu {
+margin-top: .025em,
+color: #0A1A1A;
+height: auto}
+
+#search input[type=text] {
+  width: 100%;
+  height: 1.5em;
+  font-weight: 300;
+  font-size: 1.2em;
+  box-sizing: border-box;
+  border: none;
+  background-color: #E5FFFB;
+  color: #2D2D2D;
+  font-family: "IBM Plex Sans", serif;
+  padding: 10px 10px;
+  border-radius: 10px;
   transition: all 0.3s ease-in-out;
+}
+
+#search input[type=text]::placeholder {
+  color: #a5a5a5;
+  font-weight: 300;
+}
+
+#search input[type=text]:focus {
+  outline: none;
+}
+
+#insegel-container {
+  padding-left: 0em;
+  padding-right: 1em;
+  max-width: 1500px;
+  margin-left: none;
+  margin-right: auto;
+}
+
+.caption {
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+#codecell0, #codecell1, #codecell2{
+  margin-top: 2px;
+  margin-bottom: 2px;
+  height: auto;
+  width: auto;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 10px;
+}
+
+div.highlight {
+    position: relative;
+    justify-content: left;
+}
+
+button.copybtn {
+    position: relative;
+    left: 0;
+    display: flex;
+    width: 2.7em;
+    height: 2.7em;
+    opacity: 0;
+    transition: opacity 0.3s, border 0.3s, background-color 0.3s;
+    user-select: none;
+    padding: 0;
+    border: none;
+    outline: none;
+    border-radius: 0.4em;
+    border: #1b1f2426 1px solid;
+    background-color: #f6f8fa;
+    color: #57606a;
+}
+
+button.copybtn.success {
+    border-color: #22863a;
+    color: #22863a;
+}
+
+button.copybtn svg {
+    stroke: currentColor;
+    width: 2.5em;
+    height: 2.5em;
+    padding: 0.1em;
+}
+
+
+
+.highlight:hover button.copybtn, button.copybtn.success {
+    opacity: 1;
+}
+
+.highlight button.copybtn:hover {
+    background-color: rgb(235, 235, 235);
+}
+
+.highlight button.copybtn:active {
+    background-color: rgb(187, 187, 187);
+}
+
+.admonition.note {
+  background-color: #aecdc8;
+  border-left: 4px solid var(--main-color);
+  font-size: .9em;
+  padding: 1em;
+  margin: 1em 0;
+}
+
+.admonition.warning {
+  background-color: #d3b9ae;
+  border-left: 4px solid #B73700;
+  text-color: #B73700;
+  font-size: .9em;
+  padding: 1em;
+  margin: 1em 0;
+}
+
+.admonition.warning p{
+  color: #57606a;
+}
+
+.admonition.note p{
+  color: #57606a;
+}
+
+.admonition-title {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#copyright {
+  font-size: 0.8em; /* Adjust the size as needed */
 }
