Changed CSS for the webpage

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -118,7 +118,7 @@ a.reference.internal .xref.py.py-mod.docutils.literal.notranslate {
 }
 
 #side-menu {
-margin-top: .025em,
+margin-top: .025em;
 color: #0A1A1A;
 height: auto}
 
